# test

./: README.md
rl_sar/: .gitignore  README.md  README_CN.md  build.sh  can_setup_8m_master.sh  can_setup_8m_slave.sh
rl_sar/docs/: titati_jetson_orin_setup.md  titati_self_test.md
rl_sar/scripts/: can_setup_8m_master.sh  can_setup_8m_slave.sh  titati_power_stack.sh
rl_sar/src/: battery_device  hardware_bridge  hw_bringup  tita_robot  tita_system_interfaces  titati_canfd_router
rl_sar/src/TITA-SDK-ROS2/: README.md
rl_sar/src/TITA-SDK-ROS2/docs/docs_cn/: README_CN.md
rl_sar/src/TITA-SDK-ROS2/tita_bringup/include/tita_utils/: topic_names.hpp
rl_sar/src/rl_sar/: CMakeLists.txt  package.ros1.xml  package.ros2.xml
rl_sar/src/rl_sar/include/: rl_real_titati.hpp
rl_sar/src/rl_sar/include/tita_hardware/: can_receiver.hpp  can_sender.hpp  canfd_router.hpp  tita_robot.hpp
rl_sar/src/rl_sar/include/tita_hardware/protocol/: can_utils.hpp  socket_can_receiver.hpp  socket_can_sender.hpp
rl_sar/src/rl_sar/launch/: titati_bringup.launch.py  titati_power_stack.launch.py
rl_sar/src/rl_sar/policy/: fsm.hpp
rl_sar/src/rl_sar/policy/titati/: base.yaml  fsm.hpp
rl_sar/src/rl_sar/policy/titati/robot_lab/: config.yaml  policy.pt
rl_sar/src/rl_sar/scripts/: can_setup_8m_master.sh  can_setup_8m_slave.sh  run_titati_canfd_router.sh  setup_canfd.sh  setup_titati_canfd.sh  start_titati_router.sh  titati_can_setup_master.sh  titati_can_setup_slave.sh
rl_sar/src/rl_sar/src/: rl_real_titati.cpp  rl_titati_motor_test.cpp  rl_titati_router.cpp  test_titati_motors.cpp  titati_battery_device.cpp  titati_can_router.cpp  titati_canfd_router.cpp  titati_canfd_router_node.cpp  titati_motor_test.cpp  titati_router_watchdog.cpp  titati_self_test.cpp
rl_sar/src/rl_sar/src/hardware/: can_receiver.cpp  can_sender.cpp  canfd_router.cpp  tita_robot.cpp
rl_sar/src/rl_sar/test/: titati_motor_test.cpp
rl_sar/src/robot_joint_controller/: CMakeLists.txt  package.ros2.xml
rl_sar/src/robot_msgs/: CMakeLists.txt
rl_sar/src/robots/titati_description/: CMakeLists.txt  package.ros1.xml  package.ros2.xml
rl_sar/src/robots/titati_description/config/: robot_control.yaml  robot_control_ros2.yaml
rl_sar/src/robots/titati_description/launch/: gazebo.launch  titati_rviz.launch
rl_sar/src/robots/titati_description/xacro/: gazebo.xacro  robot.xacro
rl_sar/src/tita_bringup/: CMakeLists.txt  package.ros2.xml
rl_sar/src/tita_hardware_ros2_control/battery_device/: CMakeLists.txt  package.ros2.xml
rl_sar/src/tita_hardware_ros2_control/battery_device/include/battery_device/: Common.hpp  power_management_info.hpp  update_battery_info.hpp
rl_sar/src/tita_hardware_ros2_control/battery_device/src/: battery.cpp  update_power_info.cpp
rl_sar/src/tita_hardware_ros2_control/battery_device/utils/protocol/: can_utils.hpp
rl_sar/src/tita_hardware_ros2_control/hardware_bridge/launch/: hardware_bridge.launch.py
rl_sar/src/tita_hardware_ros2_control/hw_bringup/: CMakeLists.txt  package.ros2.xml
rl_sar/src/tita_hardware_ros2_control/hw_bringup/config/: controllers.yaml
rl_sar/src/tita_hardware_ros2_control/hw_bringup/launch/: hw_bringup.launch.py
rl_sar/src/tita_hardware_ros2_control/tita_robot/: package.ros2.xml
rl_sar/src/tita_hardware_ros2_control/tita_robot/test/: test.cpp
rl_sar/src/tita_system_interfaces/: CMakeLists.txt  package.ros1.xml  package.xml
rl_sar/src/tita_system_interfaces/srv/: FanModeSetSrv.srv  HeadLightControlSrv.srv  LegLightControlSrv.srv  PowerStateSetSrv.srv  TailLightControlSrv.srv
rl_sar/src/tita_utils/: CMakeLists.txt  package.xml
rl_sar/src/titati_bringup/config/: quadruped_basic_joint_imu.yaml
rl_sar/src/titati_bringup/urdf/: titati_ros2control.xacro
rl_sar/src/titati_canfd_router/: CMakeLists.txt  package.xml
rl_sar/src/titati_canfd_router/include/titati_canfd_router/: canfd_router_can_receive_api.hpp
rl_sar/src/titati_canfd_router/src/: main.cpp  main_cli.cpp
rl_sar/src/titati_locomotion/titati_bringup/: CMakeLists.txt  package.ros2.xml
rl_sar/src/titati_locomotion/titati_bringup/src/: titati_motor_test.cpp
rl_sar/src/titati_locomotion/titati_canfd_router/src/: canfd_router_can_receive_api.cpp
rl_sar/src/titati_locomotion/titati_controllers/config/: titati_ros2_controllers.yaml
rl_sar/src/titati_locomotion/titati_controllers/include/common/: tensor_cuda_test.hpp
rl_sar/src/titati_locomotion/titati_controllers/include/task/: RLTensorRT_HighObstacle.hpp  (+2 more)
rl_sar/src/titati_motor_tools/launch/: motor_test.launch.py
robot_lab/source/robot_lab/robot_lab/assets/: titati.py
titati_control/src/: can_setup_8m_slave.sh  test_cylinder_1212_home.onnx  test_cylinder_slope_0818_new_4000.onnx  test_cylinder_volcano_stair_0813.onnx
titati_control/src/TITA-SDK-ROS2/: README.md
titati_control/src/TITA-SDK-ROS2/docs/docs_cn/: README_CN.md
titati_control/src/TITA-SDK-ROS2/user_command/src/: sdk_command_node.cpp
titati_control/src/tita_hardware_ros2_control/hardware_bridge/src/: hardware_bridge_node.cpp
titati_control/src/tita_hardware_ros2_control/hw_bringup/: package.xml
titati_control/src/tita_hardware_ros2_control/tita_robot/src/: can_receiver.cpp
titati_control/src/titati_hardware_support/: README.md
titati_control/src/titati_hardware_support/battery_device/config/: param.yaml
titati_control/src/titati_hardware_support/battery_device/launch/: battery_device_node.launch.py
titati_control/src/titati_hardware_support/battery_device/src/: main.cpp
titati_control/src/titati_hardware_support/tita_robot/: CMakeLists.txt
titati_control/src/titati_locomotion/titati_controllers/: CMakeLists.txt  package.xml
titati_control/src/titati_locomotion/titati_controllers/include/task/: RLTensorRT.hpp
titati_control/src/titati_locomotion/titati_controllers/include/titati_controller/: titati_controller_node.hpp
titati_control/src/titati_locomotion/titati_controllers/src/: titati_controller_node.cpp
titati_control/src/titati_locomotion/titati_controllers/src/task/: RLTensorRT.cpp  RLTensorRT_SlopeRecoveryRotation.cpp  tensor_cuda_test.cpp
(+20 files in other folders)
